Updated heroku pinger

--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -33,7 +33,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Portfolio</title>
+    <title>Incomple_'s Portfolio Website</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--Script below used to set min view -->
@@ -66,7 +66,7 @@
           be referred here for a look at my portfolio. Since you are already here anyway, might as well
           take a look at my stuff. This site
           showcases projects done thus far in my path towards achieving
-          proficiency in Technology ( and a passable grasp of Design ).
+          proficiency in Technology (and a passable grasp of Design).
         </p>
       </div>
     </section>
