Remove g analytics, grammar fix

--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -5,30 +5,6 @@
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EL5HHJY5RM"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-EL5HHJY5RM');
-    </script>
-    <!-- Google Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      
-      ga('create', 'G-EL5HHJY5RM', 'auto');
-      ga(function(tracker) {
-        // Logs the tracker created above to the console.
-        console.log(tracker);
-      });
-      ga('send', 'pageview');
-    </script>
-    <!-- End Google Analytics -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
@@ -241,7 +217,7 @@
           <div class="projectBox frontend javascript ">
             <a class="projectLink" href="/sudoku" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/chrome_LOOZCXwiZn.png"></img></a>
             <h3 class="projectTitle">Sudoku Solver</h3>
-            <p class="projectText">Features a brute-force backtracking sudoku-solving algorithim created using from scratch using Javascript.</p>
+            <p class="projectText">Features a brute-force backtracking sudoku-solving algorithim created from scratch using Javascript.</p>
             <a class="projectButtonLink" href="/sudoku"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
           <div class="projectBox fullstack javascript mongodb">
