--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -6,6 +6,7 @@
 <html>
   <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" href="https://raw.githubusercontent.com/Inc0mple/Logos/master/me.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -239,7 +240,7 @@
             <a class="projectButtonLink" href="/keypoints"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
           <div class="projectBox python">
-            <a class="projectLink" href="https://repl.it/@BryanTan3/DungeonCrawler1DProject" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/dungeonCrawlBackground.png"></img></a>
+            <a class="projectLink" href="https://github.com/Inc0mple/DungeonCrawler1DProject" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/dungeonCrawlBackground.png"></img></a>
             <h3 class="projectTitle">Dungeon Crawler</h3>
             <p class="projectText">Text-based Dungeon Crawler game made with Python 3. Hosted on repl.it.</p>
             <a class="projectButtonLink" href="https://github.com/Inc0mple/DungeonCrawler1DProject"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
@@ -266,7 +267,7 @@
             <a href="https://www.hitwebcounter.com" target="_blank">
             <img id="hitTracker" src="https://hitwebcounter.com/counter/counter.php?page=7716575&style=0006&nbdigits=4&type=ip&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>  </div>
           <div id="contactIconsContainer">
-            <a class="iconLink" href="mailto:bryantanzy@gnmail.com" target="_blank"><img class="contactIcon" src="assets/gmail.png"></img></a>
+            <a class="iconLink" href="mailto:bryantanzy@gmail.com" target="_blank"><img class="contactIcon" src="assets/gmail.png"></img></a>
             <a class="iconLink" href="https://t.me/Incomple" target="_blank"><img class="contactIcon" src="assets/telegram.png"></img></a>
             <a class="iconLink" href="https://wa.me/+6591717824" target="_blank"><img class="contactIcon" src="assets/whatsapp.png"></img></a>
             <a class="iconLink" href="https://us04web.zoom.us/j/5631455771?pwd=dkYzM0ZzWCsyZzk0bmV6RndZRjFiZz09" target="_blank"><img class="contactIcon" src="assets/zoom.png"></img></a>
