--- a/public/exercise.css
+++ b/public/exercise.css
@@ -154,7 +154,7 @@ input[type=text]{
     word-wrap: break-word;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 800px), only screen and (max-device-width: 800px) and (orientation: portrait) {
   #container  {
     flex-direction: column;
     justify-content: center;
