--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -267,11 +267,11 @@
             <a href="https://www.hitwebcounter.com" target="_blank">
             <img id="hitTracker" src="https://hitwebcounter.com/counter/counter.php?page=7716575&style=0006&nbdigits=4&type=ip&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>  </div>
           <div id="contactIconsContainer">
-            <a class="iconLink" href="mailto:bryantanzy@gmail.com" target="_blank"><img class="contactIcon" src="assets/gmail.png"></img></a>
-            <a class="iconLink" href="https://t.me/Incomple" target="_blank"><img class="contactIcon" src="assets/telegram.png"></img></a>
-            <a class="iconLink" href="https://wa.me/+6591717824" target="_blank"><img class="contactIcon" src="assets/whatsapp.png"></img></a>
-            <a class="iconLink" href="https://us04web.zoom.us/j/5631455771?pwd=dkYzM0ZzWCsyZzk0bmV6RndZRjFiZz09" target="_blank"><img class="contactIcon" src="assets/zoom.png"></img></a>
-            <a class="iconLink" href="https://discord.gg/2JGrwbdCx9" target="_blank"><img class="contactIcon" src="assets/discord.png"></img></a>
+            <a class="contactIconLink" href="mailto:bryantanzy@gmail.com" target="_blank"><img class="contactIcon" src="assets/gmail.png"></img></a>
+            <a class="contactIconLink" href="https://t.me/Incomple" target="_blank"><img class="contactIcon" src="assets/telegram.png"></img></a>
+            <a class="contactIconLink" href="https://wa.me/+6591717824" target="_blank"><img class="contactIcon" src="assets/whatsapp.png"></img></a>
+            <a class="contactIconLink" href="https://us04web.zoom.us/j/5631455771?pwd=dkYzM0ZzWCsyZzk0bmV6RndZRjFiZz09" target="_blank"><img class="contactIcon" src="assets/zoom.png"></img></a>
+            <a class="contactIconLink" href="https://discord.gg/2JGrwbdCx9" target="_blank"><img class="contactIcon" src="assets/discord.png"></img></a>
           </div>
           <a id="backToTopLink" href=#about class="selfLink" ><div id="backToTop" class="footerTopText"><img class="upArrowIcon" src="assets/greyUpArrow.png"></img>Back to Top</div></a>
         </div>
