--- a/views/keypoints.html
+++ b/views/keypoints.html
@@ -140,7 +140,7 @@
         fetch("/keypoints/process", {
           method: "GET",
         })
-          .then((res) => res.json())
+          .then((res) => res.text())
           .then((data) => {
             outputMsg.innerHTML += `<div class="outputText">//${data}</div>`;
             console.log(data);
