--- a/views/keypoints.html
+++ b/views/keypoints.html
@@ -156,9 +156,13 @@
             }
             else {
               console.log("time to handle heroku errors")
-              outputMsg.innerHTML += `<div class="outputText">//${"Processing taking longer than expected, likely due to heroku's memory being exceeded. Waiting for 10 more seconds..."}</div>`;
+              outputMsg.innerHTML += `<div class="outputText">//"Heroku's output:"${data}</div>`;
+              outputMsg.innerHTML += `<div class="outputText">//${"Processing taking longer than expected."}</div>`;
+              outputMsg.innerHTML += `<div class="outputText">//${"Likely due to heroku's memory being exceeded."}</div>`;
+              outputMsg.innerHTML += `<div class="outputText">//${"Waiting for 10 more seconds..."}</div>`;
               setTimeout(function() {
-                outputMsg.innerHTML += `<div class="outputText">//${"Timeout. Displaying result regardless of completion. Run again if no new overlay shown."}</div>`; 
+                outputMsg.innerHTML += `<div class="outputText">//${"Timeout. Displaying result regardless of completion."}</div>`; 
+                outputMsg.innerHTML += `<div class="outputText">//${"Run again if no new overlay shown."}</div>`; 
                 loader.style.display = "none";
                 document.getElementById("outputImg").src = "./keypoints/upload/processedImage.png?t=" + timestamp;
               }, 10000);
