--- a/views/portfolio2.html
+++ b/views/portfolio2.html
@@ -229,7 +229,7 @@
           </div>
           <div class="projectBox fullstack javascript mongodb">
             <a class="projectLink" href="/exercise" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/exerciseTrackerBackground.png"></img></a>
-            <h3 class="projectTitle">Exercise Tracker</h3>
+            <h3 class="projectTitle">Exercise Tracker Demo</h3>
             <p class="projectText">A simple CRUD (Create, Read, Update, Delete) web app demo, using MongoDB.</p>
             <a class="projectButtonLink" href="/exercise"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
@@ -242,7 +242,7 @@
           <div class="projectBox python">
             <a class="projectLink" href="https://github.com/Inc0mple/DungeonCrawler1DProject" target="_blank"><img class="projectImg" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/dungeonCrawlBackground.png"></img></a>
             <h3 class="projectTitle">Dungeon Crawler</h3>
-            <p class="projectText">Text-based Dungeon Crawler game made with Python 3. Hosted on repl.it.</p>
+            <p class="projectText">Text-based Dungeon Crawler game made with Python 3. Hosted on repl.it. Try to find the key and escape the Dungeon.</p>
             <a class="projectButtonLink" href="https://github.com/Inc0mple/DungeonCrawler1DProject"><button class="projectButton"><p class="buttonText">More</p><img class="rightArrowIcon" src="assets/rightArrow.png"></img></button></a>
           </div>
         </div>
